My fifth commit

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,1 @@
-*{
-margin:0px;
-padding:0px; 
-line-height: 1.5em;
-font-family: sans-serif;   
-}
-body{
-font-weight: 100;     
-}
-.wrapper{
-margin-top:50px;    
-}
-#formContainer{
-margin-top: 30px;    
-}
-label{
-font-weight: 200;    
-}
-textarea{
-resize: none;    
-}
-input.radio-group {
-    margin: 10px;
-}
+*{margin:0;padding:0;line-height:1.5em;font-family:sans-serif}body{font-weight:100}.wrapper{margin-top:50px}#formContainer{margin-top:30px}label{font-weight:200}textarea{resize:none}input.radio-group{margin:10px}
